--- a/index.html
+++ b/index.html
@@ -508,9 +508,25 @@
         width: 27em;
       }
     }
+    .fullscreen{
+      background-color: black;
+      width: 100%;
+      height: 100%;
+      position:absolute;
+      z-index: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .fullscreen h1{
+      color: white;
+      font-size: 3rem;
+    }
   </style>
 </head>
-
+<div class="fullscreen">
+  <h1>Hi Shivam</h1>
+</div>
 <body>
   <!---- tag nav and logo flex  row>-->
   <nav>
